user defined macro performs macro start and end string replacement