@@ -107,6 +107,7 @@
                                     --add-opens jamal.tools/javax0.jamal.tools=ALL-UNNAMED
                                     --add-opens jamal.engine/javax0.jamal=ALL-UNNAMED
                                     --add-opens jamal.engine/javax0.jamal.engine=ALL-UNNAMED
+                                    --add-opens jamal.engine/javax0.jamal.engine.util=ALL-UNNAMED
                                     --add-opens jamal.testsupport/javax0.jamal.builtinstest=ALL-UNNAMED
                                     --add-opens jamal.testsupport/javax0.jamal.testsupport=ALL-UNNAMED
                                     --add-opens jamal.extensions/javax0.jamal.extensions=ALL-UNNAMED
